modified small changes in all html pages

--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -3,7 +3,7 @@
 {% load bag_tools %}
 
 {% block content %}
-<!--- Header --->
+<!-- Header -->
 <div class="container-fluid">
     <div class="row-products">
         <div class="col text-center pb-1">
@@ -11,7 +11,7 @@
         </div>
     </div>
 </div>
-<!--- title Tabs --->
+<!-- Title Tabs -->
 <div class="row shop-top-row">
     <div class="col-12">
         <div class="title_tabs">
@@ -25,7 +25,7 @@
         </div>
     </div>
 </div>
-<!--- Shopping Bag--->
+<!-- Shopping Bag-->
 <div class="row">
     <div class="col">
         {% if bag_items %}
@@ -112,7 +112,7 @@
     </table>
 </div>
 {% else %}
-<!--- Empty Bag --->
+<!-- Empty Bag -->
     <p class="empty-bag">There are no products in your bag yet. Look at our products!</p>
 <div class="col-12">
     <div class="d-flex justify-content-center">
