--- a/blog/templates/blog/blog.html
+++ b/blog/templates/blog/blog.html
@@ -2,14 +2,14 @@
 {% load static %}
 
 {% block content %}
-<!--- Header --->
+<!-- Header -->
 <div class="container-fluid">
     <div class="row-products">
         <div class="col text-center mt-3 mb-3 pb-1">
             <h2 class="logo-font">Blog</h2>
         </div>
     </div>
-    <!--- Blog Intro --->
+    <!-- Blog Page -->
     <section>
         <div class="container-fluid div-section">
             <div class="container">
@@ -31,7 +31,7 @@
             </div>
         </div>
     </section>
-<!--- Blog pictures --->
+<!-- Blog Images -->
     <div class="row home-section-3">
     <div class="container">
         <div class="row product-card-row">
@@ -59,7 +59,7 @@
         </div>
     </div>
     </div>
-<!--- Blogs --->
+<!-- Blogs -->
     <div class="bg-white-trans-blog">
         <div class="row">
             <div class="col-8 offset-2">
