--- a/home/templates/home/includes/home-section-1.html
+++ b/home/templates/home/includes/home-section-1.html
@@ -1,12 +1,12 @@
 {% block content %}
-<!--- Header Text --->
+<!-- Header Text -->
 <div class="container-fluid div-section">
     <div class="container home-section-1-heading">
         <img src="{{ MEDIA_URL }}logo_small.jpg" width="200" height="200" alt="logo" class="center-3"></br>
             <h2 class="home-decor">Be Inspired....</h2>
     </div>
 
-<!--- Be Inspired Images --->
+<!-- Be Inspired Images -->
     <div class="row home-section-3">
         <div class="container">
             <div class="row product-card-row">
