--- a/home/templates/home/includes/home-section-2.html
+++ b/home/templates/home/includes/home-section-2.html
@@ -1,12 +1,12 @@
 {% block content %}
-<!--- Header Text --->
+<!-- Header Text -->
 <div class="container-fluid div-section">
     <div class="container home-section-1-heading">
         </br>
             <h2 class="home-decor">My Testimonials</h2>
     </div>
 
-    <!--- Testimonials --->
+    <!-- Testimonials -->
     <div class="container mt-4">
         <div id="demo" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
