--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block head_content %}
-<!--- Hero image and text --->
+<!-- Hero Image -->
     <div id="homepage-header">
         <div class="container">
             <div class="row">
