--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -3,7 +3,7 @@
 
 
 {% block content %}
-<!--- Add product header --->
+<!-- Add Product header -->
 <div class="container-fluid">
     <div class="row-products">
         <div class="col text-center mt-3 mb-3 pb-1">
@@ -12,7 +12,7 @@
     </div>
 </div>
 
-<!--- Crisy Field Form --->
+<!-- Crisy Field Form -->
     <div class="container general-container">
         <div class="row">
             <div class="col-sm-10 offset-sm-1 col-md-8 offset-md-2">
