--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-<!--- Header --->
+<!-- Header -->
 <div class="container-fluid">
     <div class="row-products">
         <div class="col text-center mb-3 pb-1">
@@ -19,7 +19,7 @@
             </div>
         </div>
     </div>
-<!--- Product Card --->
+<!-- Product Card -->
     <div class="row">
         <div class="product-container col-10 offset-1">
             <div class="row mt-1 mb-2"></div>
