--- a/profiles/templates/profiles/edit_profile.html
+++ b/profiles/templates/profiles/edit_profile.html
@@ -11,7 +11,7 @@
         </div>
     </div>
 </div>
-<!-- title_tabs -->
+<!-- Title Tabs -->
 <div class="container">
     <div class="row shop-top-row">
         <div class="col-12">
@@ -27,18 +27,18 @@
         </div>
     </div>
 </div>
-<!--- Shipping Information --->
+<!-- Shipping Information -->
 <div class="container profile-container mb-1">
     <div class="row">
         <div class="col-sm-10 offset-sm-1 col-md-8 offset-md-2">
             <p class="profile-intro-p">
                 Below are shipping details saved for this account, {{ user.username }}.
-                Update the form if needed so that we can help you with a smooth checkout process.
+                If this is not correct please change this in the form.
             </p>
         </div>
     </div>
 </div>
-<!--- Update Profile Info --->
+<!-- Update Profile Info -->
 <div class="container profile-container">
     <div class="row">
         <div class="col-sm-10 offset-sm-1 col-md-8 offset-md-2">
