--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -10,7 +10,7 @@
         </div>
     </div>
 </div>
-<!-- title tabs -->
+<!-- Title Tabs -->
 <div class="container">
     <div class="row shop-top-row">
         <div class="col-12">
@@ -24,14 +24,14 @@
         </div>
     </div>
 </div>
-<!-- Page content -->
+<!-- Page Content -->
 <div class="container profile-container">
     <div class="row">
         <div class="col-12">
             <p class="mb-0">
                 Welcome to your profile page, {{ user.username }}!
                 <br>
-                Take your time and look at all the products we have to offer. 
+                Pleade take a look at all the products we have to offer. 
                 If you have any questions feel free to get in touch via our contact form.
                 <br>
             </p>
