--- a/about/templates/about/about.html
+++ b/about/templates/about/about.html
@@ -10,7 +10,7 @@
             <h2 class="logo-font">About</h2>
         </div>
     </div>
-<!--- About image --->
+<!-- About image -->
     <div class="container">
         <div class="row align-items-center my-4">
             <div class="col-12 col-md-6">
@@ -18,7 +18,7 @@
                     <img src="{{ MEDIA_URL }}about-1.jpeg" alt="about-photo" width="400" height="550" class="about-image">
                 </div>
             </div>
-<!--- About Container --->
+<!-- About Container -->
             <div class="col-12 col-md-12 col-lg-6">
                 <div class="about-details-container mb-5 mt-md-5">
                     <h2 class="about-heading text-center">My Story</h2>
@@ -41,7 +41,7 @@
                 <h3 class="new">Gallery</h3></br>
                 <div class="row home-section-3">
                     <div class="container">
-                        <!--- images --->
+                        <!-- Images -->
                         <div class="row product-card-row">
                             <div class="col-12 col-md-6 col-lg-4">
                                 <div class="div-product-card">
