--- a/blog/templates/blog/blog_detail.html
+++ b/blog/templates/blog/blog_detail.html
@@ -3,7 +3,7 @@
 {% load static %}
 
 {% block content %}
-<!--- Blog Details --->
+<!-- Blog Details -->
 <div class="container-fluid center">
     <div class="row mt-2 py-2">
         <div class="col-sm-10 offset-sm-1 col-md-8 offset-md-2">
