--- a/contact/templates/contact/contact.html
+++ b/contact/templates/contact/contact.html
@@ -3,7 +3,7 @@
 
 
 {% block content %}
-<!--- Header --->
+<!-- Header -->
 <div class="container-fluid">
     <div class="row-products">
         <div class="col text-center mt-3 mb-3 pb-1">
@@ -36,7 +36,7 @@
     </div>
 </section>
 
-<!--- Form/taken from W3 schools https://www.w3schools.com/howto/howto_css_contact_form.asp --->
+<!-- Form taken from W3 schools https://www.w3schools.com/howto/howto_css_contact_form.asp -->
     <div class="container">
         <div class="col-sm-10 offset-sm-1 col-md-8 offset-md-2">
         <form id="contactForm">
