--- a/products/templates/products/edit_product.html
+++ b/products/templates/products/edit_product.html
@@ -3,7 +3,7 @@
 
 
 {% block content %}
-<!--- Edit product header --->
+<!-- Edit product header -->
 <div class="container-fluid">
     <div class="row-products">
         <div class="col text-center mt-3 mb-3 pb-1">
@@ -11,7 +11,7 @@
         </div>
     </div>
 </div>
-<!--- edit product form --->
+<!-- edit product form -->
 <div class="container general-container">
     <div class="row">
         <div class="col-sm-10 offset-sm-1 col-md-8 offset-md-2">
