--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-<!--- Title Tabs--->
+<!-- Title Tabs -->
 <div class="container">
     <div class="row shop-top-row">
         <div class="col-12">
@@ -21,7 +21,7 @@
         </div>
     </div>
 </div>
-<!-- Product information -->
+<!-- Product Information -->
 <div class="container-fluid">
     <div class="row">
         <div class="col-12 col-md-6 col-sm-4 col-lg-4 offset-lg-2">
@@ -61,7 +61,7 @@
                 {% endif %}
                 <p class="mt-3">{{ product.description }}</p>
                 
-<!--- Quantity/add to bag --->
+<!-- Quantity/Add to bag -->
                 <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
                     {% csrf_token %}
                     <div class="form-row">
