--- a/profiles/templates/profiles/order_history.html
+++ b/profiles/templates/profiles/order_history.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-<!--- Order History title --->
+<!-- Order History Title -->
 <div class="container-fluid">
     <div class="row-products">
         <div class="col text-center mt-3 mb-3 pb-1">
@@ -10,7 +10,7 @@
         </div>
     </div>
 </div>
-<!--- title Tabs --->
+<!-- Title Tabs -->
 <div class="container">
     <div class="row shop-top-row">
         <div class="col-12">
@@ -27,7 +27,7 @@
     </div>
 </div>
 
-<!--- Order History --->
+<!-- Order History -->
 <div class="container profile-container mb-1">
     <div class="row">
         <div class="col-12">
@@ -35,7 +35,7 @@
             <p class="profile-intro-p">
                 Here are all your recent purchases, {{ user.username }}.
             </p>
-            <!--- No orders --->
+            <!-- No orders -->
             {% else %}
             <p class="profile-intro-p">
                 It looks like you haven't ordered anything yet, {{ user.username }}.</br>
@@ -49,7 +49,7 @@
     </div>
 </div>
 
-<!--- Details of previous orders --->
+<!-- Previous Orders Details -->
 <div class="container mb-5">
     {% for order in orders %}
     <div class="container profile-container mt-4 mb-2 div-profile-order">
