--- a/reviews/templates/reviews/includes/reviews.html
+++ b/reviews/templates/reviews/includes/reviews.html
@@ -1,7 +1,7 @@
 {% block content %}
 {% load static %}
 
-<!--- Reviews --->
+<!-- Reviews -->
 <div class="container text-center" id="reviews">
     <h2 class="font-heading d-inline-block p-1 mt-5 mb-3">Reviews</h2>
         <div class="text-center pb-3">
@@ -119,13 +119,13 @@
                         <div class="modal-dialog">
                             <div class="modal-content rounded-0">
                                 <div class="modal-header text-uppercase">
-                                    <h5 class="modal-title" id="deleteUserReview">Wow Wait!</h5>
+                                    <h5 class="modal-title" id="deleteUserReview">Oeeeh Wait!</h5>
                                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                         <span aria-hidden="true">&times;</span>
                                     </button>
                                 </div>
                                 <div class="modal-body">
-                                    Do you really want to delete the review? There is no way back!!!
+                                    Do you really want to delete the review? U can't undo this!!
                                 </div>
                                 <div class="modal-footer">
                                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
