--- a/templates/base.html
+++ b/templates/base.html
@@ -31,12 +31,12 @@
         <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
         <script type="text/javascript" src="https://cdn.emailjs.com/sdk/2.2.4/email.min.js"></script>
-<!--- Stripe --->
+<!-- Stripe -->
         <script src="https://js.stripe.com/v3/"></script>   
     {% endblock %}
 
     {% block extra_js %}
-<!---- Favicon ---->
+<!-- Favicon -->
         <link rel="apple-touch-icon" sizes="180x180" href="{% static 'favicon/apple-touch-icon.png' %}">
         <link rel="icon" type="image/png" sizes="32x32" href="{% static 'favicon/favicon-32x32.png' %}">
         <link rel="icon" type="image/png" sizes="16x16" href="{% static 'favicon/favicon-16x16.png' %}">
@@ -46,7 +46,7 @@
     </head>
 
     <body>
-<!--- Header and Navbar --->
+<!-- Header and Navbar -->
         <header class="container-fluid">
             <div id="delivery-banner" class="row text-center">
                 <div class="col bg-black text-white">
@@ -120,7 +120,7 @@
             </div>
         </header>
     
-    <!--- Messages --->
+    <!-- Messages -->
         {% if messages %}
         <div class="message-container">
             {% for message in messages %}
@@ -147,7 +147,7 @@
             {% endblock %}
         </main>
     
-    <!--- Toasts --->
+    <!-- Toasts -->
         {% block postloadjs %}
         <script type="text/javascript">
             $('.toast').toast('show');
@@ -155,7 +155,7 @@
         </script>
         {% endblock %}
     
-    <!--- Footer --->
+    <!-- Footer -->
         {% include 'includes/footer.html' %}
     
     </body>
