--- a/templates/allauth/account/password_reset.html
+++ b/templates/allauth/account/password_reset.html
@@ -9,7 +9,7 @@
 <div class="container-fluid">
     <div class="row-products">
         <div class="col">
-            <h2 class="logo-font text-center">{% trans "Log Out" %}</h2>
+            <h2 class="logo-font text-center">{% trans "Password Reset" %}</h2>
         </div>
     </div>
 </div>
